[tool.poetry]
name = "pairmeup"
version = "0.1.0"
description = ""
authors = ["Vinicius Mesel <bioinfo.vinicius@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10.5"
python-decouple = "^3.6"
"discord.py" = "^1.7.3"
shortuuid = "^1.0.9"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"
black = "^22.6.0"
isort = "^5.10.1"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
